[package]
name = "pms5003"
version = "0.1.0"
authors = ["David Park <David.Park@agoda.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = ">=1.0.5", features = ["derive"] }
serde_json = ">=1.0.50"
actix-web = "4.0.0-beta.4"
tokio = { version = "1.3.0", features = ["rt", "fs", "time", "process", "sync", "macros"] }
lazy_static = ">=1.4.0"
anyhow = "1.0.28"
simple_logger = "1.11.0"
log = "0.4.14"
